@@ -153,6 +153,10 @@ required during their export.</td>
 <table>
 <tbody align="left" valign="top">
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3325116);return false;">3325116</a><br></td>
+<td>No longer crashes when selecting system tray's more recent entry immediately after unlock.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3303018);return false;">3303018</a><br></td>
 <td>Filters with quotes in their name are now correctly exported, imported
 and displayed in the Manage Filters dialog.</td>
